<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/pick_bt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="buttonClick1"
        android:text="@string/date_select1" />

    <Button
        android:id="@+id/pick_bt2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="buttonClick2"
        android:text="@string/date_select2" />

    <Button
        android:id="@+id/pick_bt3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="buttonClick3"
        android:text="@string/date_select3" />
</LinearLayout>
