<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/date_select"
        android:textColor="#222222"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_year"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_month"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_day"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_hour"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_second"
            android:textColor="#333333"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <com.wheel.WheelView
            android:id="@+id/yearwheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wheel.WheelView
            android:id="@+id/monthwheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wheel.WheelView
            android:id="@+id/daywheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wheel.WheelView
            android:id="@+id/hourwheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wheel.WheelView
            android:id="@+id/minutewheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dtp_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/_confirm"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dtp_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_cancel_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/_cancel"
            android:textColor="#333333"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>